# binassets

./: .gitignore  CMakeLists.txt  LICENSE  TODO  app.bat  bin.h  build.bat  makefile  reader.bat  readme.md  writer.bat
include/binassets/: binasset_common.h  binasset_json.h  binasset_read.h  binasset_read_decl.h  binasset_stl_read.h  binasset_stl_read_decl.h  binasset_write.h  binasset_write2.h  binasset_write_decl.h
src/: bin.h  binasset_json.cpp  binasset_read.cpp  binasset_stl_read.cpp  binasset_write.cpp  imgbin.cpp  imgbin.h  imgbin_structs.cpp  imgbinio.cpp  main.cpp  util_debug.h
